# SegmentLabeler

./: CMakeLists.txt  README.md  SegmentLabeler.cpp  SegmentLabeler.hpp  Segmentlabeler.hpp  segmentlabeler.py  test_segmentlabeler.cpp
python/: CMakeLists.txt  segmentlabeler.i
